<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edujimenez.miapp2.ActivityConfirmar"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:layout_margin="@dimen/horizontal_margen2"
        android:layout_gravity="center"
        android:textSize="@dimen/tamano_titulo"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"/>
    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"/>
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"/>
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"/>
    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editar"
        android:layout_margin="@dimen/horizontal_margen2"
        android:textSize="@dimen/tamano_campo"
        android:theme="@style/miBotonRaised"/>

</LinearLayout>
