<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.edujimenez.miapp2.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizontal_margen"
        app:hintEnabled="true"
       >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/fecha"/>

    <DatePicker
        android:id="@+id/dp_fecha"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:minDate="01/01/1940"
        android:maxDate="01/01/2020"
        android:layout_gravity="center"
        android:layout_margin="@dimen/horizontal_margen">
    </DatePicker>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizontal_margen"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoTelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizontal_margen"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizontal_margen"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margen"
        android:text="@string/boton"
        android:layout_gravity="center"
        android:theme="@style/miBotonRaised"/>

</LinearLayout>

